kubernetes/docuseal/docuseal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docuseal
  namespace: docuseal
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: docuseal
