kubernetes/docuseal/docuseal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docuseal-ingress
  namespace: docuseal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/hostname: docuseal.homelab.jonasg.be
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  tls:
  - hosts:
    - docuseal.homelab.jonasg.be
    secretName: docuseal-tls
  rules:
  - host: docuseal.homelab.jonasg.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docuseal
            port:
              number: 80
